syntax = "proto3";

package proto.v1;
option go_package = "rina.icu/pocman/common/protocol;protocol";

// AgentService provides RPC methods for agent communication and monitoring.
service AgentService {
  // Heartbeat receives agent status updates and returns acknowledgment.
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
}

message HeartbeatRequest {
  string agent_id = 1;
  float cpu_usage = 2;
  float mem_usage = 3;
}

message HeartbeatResponse {
  string status = 1;
}
